.microk8s/svc_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-txrmngr
  namespace: demo
spec:
  selector:
    app: app-txrmngr
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: svc-operator
  namespace: demo
spec:
  selector:
    app: app-operator
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: svc-watchdog
  namespace: demo
spec:
  selector:
    app: app-watchdog
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: svc-service
  namespace: demo
spec:
  selector:
    app: app-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
