.microk8s/svc_stack.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-mongodb
  namespace: demo
spec:
  selector:
    app: stack-mongodb
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: svc-ganache
  namespace: demo
spec:
  selector:
    app: stack-ganache
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8545
      targetPort: 8545
    - name: websocket
      protocol: TCP
      port: 8546
      targetPort: 8546

---
apiVersion: v1
kind: Service
metadata:
  name: svc-zookeeper
  namespace: demo
  labels:
    app: svc-zookeeper
spec:
  selector:
    app: stack-zookeeper
  type: ClusterIP
  ports:
    - name: client
      protocol: TCP
      port: 2181
      targetPort: 2181

---
apiVersion: v1
kind: Service
metadata:
  name: svc-kafka
  namespace: demo
  labels:
    app: svc-kafka
spec:
  selector:
    app: stack-kafka
  type: ClusterIP
  ports:
    - name: kafka-internal
      protocol: TCP
      port: 9092
      targetPort: 9092
    - name: kafka-external
      protocol: TCP
      port: 9094
      targetPort: 9094
