.microk8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: demo
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /svc/
        pathType: Prefix
        backend:
          service:
            name: svc-service
            port:
              number: 5000
      - path: /watchdog/
        pathType: Prefix
        backend:
          service:
            name: svc-watchdog
            port:
              number: 5000
